tests/golden/parse_errors/struct_missing_brace.err
Parse error at 2:23: expected `}` after struct fields, found Semicolon `;`
  print Person { name: 1;
                        ^
